css changes fixing layer bug on mobile view

--- a/src/assets/scss/containers/3d_animations/Circles/Circles.scss
+++ b/src/assets/scss/containers/3d_animations/Circles/Circles.scss
@@ -17,7 +17,7 @@ $circles:
 
 .wrapper_circles{
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     background-color: black;
     display: flex;
     align-items: center;
